# assets-statistics-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
envs/: dev.env
src/: database.py  depends.py  main.py  settings.py
src/additional_apps/coin_statistics_consumer/: main.py
src/additional_apps/db_consumer/: main.py
src/commands/: add_transactions.py  add_transactions_from_s3_file.py  calculate_statistics.py  recalculate_statistics.py
src/conditions/: coins.py  events.py
src/conditions/interfaces/: base_specification.py  i_specification.py
src/errors/: statistics.py
src/event_handlers/: add_coin_tracking.py  calculate_statistics.py
src/event_handlers/interfaces/: i_event_handler.py
src/events/: created_transactions.py
src/events/intefaces/: i_event.py
src/joins/: example.py  sa_join.py
src/joins/interfaces/: i_join_specification.py
src/migrations/: env.py
src/models/: __init__.py  coins.py  events.py  statistics.py  transactions.py  transactions_of_statistics.py
src/orders/: events.py  sa_order.py
src/orders/interfaces/: i_order.py
src/queries/: generate_load_transaction_file_url.py  transaction_history.py
src/repositories/: sa_repositories.py  sa_repository.py
src/routes/: statistics.py  transactoins.py
src/schemas/: coin_statistics.py  transaction.py  transaction_filter.py
src/services/: excel_transaction_parser.py  file_parser_factory.py  statistic_calculator.py
src/storages/: minio_storage.py
src/utils/: event_dispatcher.py  unit_of_work.py
tests/unit/: test_calculator.py
(+10 files in other folders)
